--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -72,7 +72,7 @@ body {
 
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
-.blog-box {
+.blogs-box {
     margin-bottom: 20px;
     border: 1px solid black;
     background-color: rgb(225, 235, 217);
@@ -85,15 +85,14 @@ body {
     object-fit: cover; /* Zuschneiden des Bildes */
 }
 
-.blog-text {
+.blogs-text {
     padding: 10px;
 }
 
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
 .blog-content {
-    margin-left:  100px;
-    margin-right: 100px;
+    
 }
 
 .blog-header {
