--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -92,7 +92,7 @@ body {
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
 .blog-content {
-    
+    text-align: justify;
 }
 
 .blog-header {
