--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -72,6 +72,10 @@ body {
 
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
+.blogs-box:hover {
+    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+}
+
 .blogs-box {
     margin-bottom: 20px;
     border: 1px solid black;
@@ -89,7 +93,7 @@ body {
     padding: 10px;
 }
 
-/* --------------- BLOGS ----------------------------------------------------------------------------------- */
+/* --------------- BLOG ----------------------------------------------------------------------------------- */
 
 .blog-content {
     text-align: justify;
