--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -127,7 +127,7 @@ body {
 }
 
 
-/* --------------- COUNTRIES ----------------------------------------------------------------------------------- */
+/* --------------- LAENDER / REISEARTEN ----------------------------------------------------------------------------------- */
 
 .countries-card-text {
     margin-left: 15px;
@@ -140,4 +140,8 @@ body {
 .card {
     border: 1px solid rgb(151, 151, 151);
     background-color: rgb(225, 235, 217);
+}
+
+.reiseart-card-main {
+    margin: 15px;
 }
