--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -126,6 +126,15 @@ body {
     background-color: rgb(204, 215, 194); /* Light gray background on hover */
 }
 
+.form-check-input {
+    background-color: rgb(225, 235, 217);
+    border-color: rgb(151, 151, 151);
+}
+
+.form-check-input:hover {
+    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+}
+
 
 /* --------------- LAENDER / REISEARTEN ----------------------------------------------------------------------------------- */
 
