--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -53,14 +53,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
 /* --------------- FOOTER ----------------------------------------------------------------------------------- */
 
 .footer {
@@ -68,6 +60,10 @@ body {
     color: rgb(160, 255, 185);
     width: 100%;
     height: 300px;   
+}
+
+.nav-link {
+    color: rgb(255, 255, 255);
 }
 
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
@@ -82,6 +78,8 @@ body {
     background-color: rgb(225, 235, 217);
     padding-right: 10px;
     border-radius: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .title-image {
@@ -97,6 +95,35 @@ body {
 
 .blogs-text-box {
     height: 290px;
+}
+
+.card-header {
+    background-color: rgb(225, 235, 217);
+}
+
+.custom-tabs .nav-link {
+    border: 1px solid rgb(151, 151, 151);
+    margin-right: 10px;
+    border-radius: 5px;
+    padding: 8px 16px; 
+    color: rgb(81, 87, 94); 
+    background-color: rgb(255, 255, 255);
+}
+
+.custom-tabs .nav-link.active {
+    background-color: rgb(53, 58, 64); 
+    color: white; 
+    border-color: rgb(53, 58, 64);
+}
+
+.custom-tabs .nav-link:hover {
+    background-color: rgb(204, 215, 194); 
+    color: rgb(52, 58, 64); 
+    border-color: rgb(73, 80, 87);
+}
+
+.custom-tabs {
+    margin-bottom: 1px; 
 }
 
 /* --------------- BLOG ----------------------------------------------------------------------------------- */
