--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -67,6 +67,10 @@ body {
     color: rgb(255, 255, 255);
 }
 
+.nav-link:hover {
+    color: rgb(160, 255, 185);
+}
+
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
 .blogs-box:hover {
@@ -156,6 +160,16 @@ body {
 
 .form-check-input:hover {
     background-color: rgb(204, 215, 194); /* Light gray background on hover */
+}
+
+.btn-disabled {
+    opacity: 0.5;
+}
+
+.btn-disabled:hover {
+    opacity: 0.5;
+    background-color: white;
+    color: black;
 }
 
 
