--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -20,9 +20,9 @@ body {
     object-position: center 35%;
 }
 
-.main-title {
+.main-header {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 120px;
     color: rgb(202, 250, 215);
     z-index: 1; /* Stellt sicher, dass der Text über dem Bild liegt */
     position: relative; /* Damit der z-index wirkt */
@@ -30,9 +30,33 @@ body {
     font-weight: bold;
 }
 
+.layout-title {
+    color: rgb(202, 250, 215); 
+    font-size: 67px; 
+    margin-bottom: 5px; 
+    line-height: 1;
+}
+
+.layout-subtitle {
+    color: rgb(202, 250, 215); 
+    font-size: 25px; 
+    margin-top: 0px; 
+    line-height: 1;
+}
+
+@media (max-width: 768px) {
+    .layout-title {
+      font-size: 48px; /* Verkleinere die Hauptschrift bei Handygröße */
+    }
+
+    .layout-subtitle {
+      font-size: 18px; /* Verkleinere den Untertitel */
+    }
+  }
+
 .container {
     background-color: white;
-    margin-top: 150px;
+    margin-top: 180px;
     padding: 20px;
     border-radius: 5px 5px 0px 0px;
 }
@@ -190,4 +214,22 @@ body {
 
 .reiseart-card-main {
     margin: 15px;
+}
+
+
+/* --------------- ABOUT ----------------------------------------------------------------------------------- */
+
+.about-box {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-image {
+    width: 400px; 
+    height: 200px; 
+    border-radius: 5px; 
+    object-fit: cover; 
+    margin-bottom: 20px;
+    object-position: center 57%
 }
