--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -226,10 +226,10 @@ body {
 }
 
 .about-image {
-    width: 400px; 
+    width: 100%; 
     height: 200px; 
     border-radius: 5px; 
     object-fit: cover; 
     margin-bottom: 20px;
-    object-position: center 57%
+    object-position: center 53%
 }
