--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -107,6 +107,7 @@ body {
     background-color: rgb(225, 235, 217);
     padding-right: 10px;
     border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .title-image {
@@ -210,6 +211,8 @@ body {
 .card {
     border: 1px solid rgb(151, 151, 151);
     background-color: rgb(225, 235, 217);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .reiseart-card-main {
@@ -223,6 +226,12 @@ body {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
+    background-color: rgb(225, 235, 217); 
+    border: 1px solid rgb(151, 151, 151);
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
 .about-image {
