--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -242,3 +242,12 @@ body {
     margin-bottom: 20px;
     object-position: center 53%
 }
+
+/* --------------- HOME ----------------------------------------------------------------------------------- */
+
+.card-img-top {
+    width: 100%; 
+    height: 200px; 
+    object-fit: cover; 
+    border-bottom: 1px solid #ddd;
+}
