--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -251,3 +251,11 @@ body {
     object-fit: cover; 
     border-bottom: 1px solid #ddd;
 }
+
+canvas {
+    max-width: 100%;
+    height: 400px;
+    margin: 20px auto;
+    border-color: rgba(151, 151, 151);
+    background-color: rgba(225, 235, 217);
+}
