--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -256,6 +256,6 @@ canvas {
     max-width: 100%;
     height: 400px;
     margin: 20px auto;
-    border-color: rgba(151, 151, 151);
+    border-color: 1px solid rgba(151, 151, 151);
     background-color: rgba(225, 235, 217);
 }
