--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -254,8 +254,10 @@ body {
 
 canvas {
     max-width: 100%;
-    height: 400px;
+    height: 350px;
     margin: 20px auto;
+    margin-left: 20px;
+    margin-right: 20px;
     border-color: 1px solid rgba(151, 151, 151);
     background-color: rgba(225, 235, 217);
 }
