--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -24,35 +24,39 @@ body {
     text-align: center;
     margin-top: 120px;
     color: rgb(202, 250, 215);
-    z-index: 1; /* Stellt sicher, dass der Text über dem Bild liegt */
-    position: relative; /* Damit der z-index wirkt */
-    font-family: sans-serif; 
+    z-index: 1;
+    /* Stellt sicher, dass der Text über dem Bild liegt */
+    position: relative;
+    /* Damit der z-index wirkt */
+    font-family: sans-serif;
     font-weight: bold;
 }
 
 .layout-title {
-    color: rgb(202, 250, 215); 
-    font-size: 67px; 
-    margin-bottom: 5px; 
+    color: rgb(202, 250, 215);
+    font-size: 67px;
+    margin-bottom: 5px;
     line-height: 1;
 }
 
 .layout-subtitle {
-    color: rgb(202, 250, 215); 
-    font-size: 25px; 
-    margin-top: 0px; 
+    color: rgb(202, 250, 215);
+    font-size: 25px;
+    margin-top: 0px;
     line-height: 1;
 }
 
 @media (max-width: 768px) {
     .layout-title {
-      font-size: 36px; /* Verkleinere die Hauptschrift bei Handygröße */
+        font-size: 36px;
+        /* Verkleinere die Hauptschrift bei Handygröße */
     }
 
     .layout-subtitle {
-      font-size: 18px; /* Verkleinere den Untertitel */
+        font-size: 18px;
+        /* Verkleinere den Untertitel */
     }
-  }
+}
 
 .container {
     background-color: white;
@@ -60,8 +64,6 @@ body {
     padding: 20px;
     border-radius: 5px 5px 0px 0px;
 }
-
-
 
 
 
@@ -77,14 +79,13 @@ body {
 
 
 
-
 /* --------------- FOOTER ----------------------------------------------------------------------------------- */
 
 .footer {
     background-color: rgb(44, 44, 44);
     color: rgb(160, 255, 185);
     width: 100%;
-    height: 300px;   
+    height: 300px;
 }
 
 .nav-link {
@@ -95,10 +96,13 @@ body {
     color: rgb(160, 255, 185);
 }
 
+
+
 /* --------------- BLOGS ----------------------------------------------------------------------------------- */
 
 .blogs-box:hover {
-    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+    background-color: rgb(204, 215, 194);
+    /* Light gray background on hover */
 }
 
 .blogs-box {
@@ -114,7 +118,8 @@ body {
     width: 100%;
     height: 350px;
     border-radius: 5px 0px 0px 5px;
-    object-fit: cover; /* Zuschneiden des Bildes */
+    object-fit: cover;
+    /* Zuschneiden des Bildes */
 }
 
 .blogs-right-box {
@@ -134,22 +139,24 @@ body {
     margin-right: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    padding: 8px 16px; 
-    color: rgb(81, 87, 94); 
+    padding: 8px 16px;
+    color: rgb(81, 87, 94);
     background-color: rgb(255, 255, 255);
 }
 
 .custom-tabs .nav-link.active {
-    background-color: rgb(53, 58, 64); 
-    color: white; 
+    background-color: rgb(53, 58, 64);
+    color: white;
     border-color: rgb(53, 58, 64);
 }
 
 .custom-tabs .nav-link:hover {
-    background-color: rgb(204, 215, 194); 
-    color: rgb(52, 58, 64); 
+    background-color: rgb(204, 215, 194);
+    color: rgb(52, 58, 64);
     border-color: rgb(73, 80, 87);
 }
+
+
 
 /* --------------- BLOG ----------------------------------------------------------------------------------- */
 
@@ -164,8 +171,11 @@ body {
 .blog-image {
     width: 300px;
     height: 100%;
-    object-fit: cover; /* Zuschneiden des Bildes */
+    object-fit: cover;
+    /* Zuschneiden des Bildes */
 }
+
+
 
 /* --------------- NEUER BLOG HINZUFUEGEN ----------------------------------------------------------------------------------- */
 
@@ -175,7 +185,8 @@ body {
 }
 
 .form-control:hover {
-    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+    background-color: rgb(204, 215, 194);
+    /* Light gray background on hover */
 }
 
 .form-check-input {
@@ -184,7 +195,8 @@ body {
 }
 
 .form-check-input:hover {
-    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+    background-color: rgb(204, 215, 194);
+    /* Light gray background on hover */
 }
 
 .btn-disabled {
@@ -198,6 +210,7 @@ body {
 }
 
 
+
 /* --------------- LAENDER / REISEARTEN ----------------------------------------------------------------------------------- */
 
 .countries-card-text {
@@ -205,7 +218,8 @@ body {
 }
 
 .card:hover {
-    background-color: rgb(204, 215, 194); /* Light gray background on hover */
+    background-color: rgb(204, 215, 194);
+    /* Light gray background on hover */
 }
 
 .card {
@@ -220,13 +234,14 @@ body {
 }
 
 
+
 /* --------------- ABOUT ----------------------------------------------------------------------------------- */
 
 .about-box {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
-    background-color: rgb(225, 235, 217); 
+    background-color: rgb(225, 235, 217);
     border: 1px solid rgb(151, 151, 151);
     border-radius: 5px;
     padding: 20px;
@@ -235,20 +250,22 @@ body {
 }
 
 .about-image {
-    width: 100%; 
-    height: 200px; 
-    border-radius: 5px; 
-    object-fit: cover; 
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+    object-fit: cover;
     margin-bottom: 20px;
     object-position: center 53%
 }
 
+
+
 /* --------------- HOME ----------------------------------------------------------------------------------- */
 
 .card-img-top {
-    width: 100%; 
-    height: 200px; 
-    object-fit: cover; 
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
     border-bottom: 1px solid #ddd;
 }
 
